upgrade java version to 17, prepare for the new version, minor refactor, upgrade mvn plugins' versions